# smart-home

./: .env.example  .gitignore  LICENSE  README.md  agent.py  debug_messages.json  pyproject.toml
docs/: ROADMAP.md  SPOTIFYSETUP.md
src/smart_home/: driver.py
src/smart_home/agentic/: agent.py
src/smart_home/agentic/agents/: agent.py  weather_agent.py
src/smart_home/agentic/tools/: weather_tool.py
src/smart_home/agents/: home.py  search.py  spotify.py  weather.py  zigbee.py
src/smart_home/config/: logging.py  paths.py
src/smart_home/core/: agent.py  session.py
src/smart_home/integrations/: spotify.py  weathergov.py
src/smart_home/mcp_integration/: README.md  __init__.py  client_manager.py  mcp_config.py  mcp_tools.py  schema_converter.py
src/smart_home/tools/spotify/: pause.py  play.py  spotify_agent.py  switch.py  utils.py  volume.py
src/smart_home/tools/weather/: weather_tool.py
src/smart_home/tools/zigbee/: get_devices.py  set_devices.py
src/smart_home/utils/: home_utils.py  spotify_creds.py  voice_utils.py
tests/: test_zigbee.py
